deploy/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    admin: adminer
  name: adminer
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      admin: adminer-pod
  template:
    metadata:
      labels:
        admin: adminer-pod
    spec:
      restartPolicy: Always
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
