deploy/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: rnd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-pod
  template:
    metadata:
      labels:
        app: api-pod
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: ghcr.io/andersevenrud/microservice-rnd-api:latest
          ports:
            - containerPort: 8080
