deploy/cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cli
  name: cli
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cli-pod
  template:
    metadata:
      labels:
        app: cli-pod
    spec:
      containers:
        - name: cli
          image: microservice-rnd-cli
