deploy/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    backend: db
  name: db
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: db-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        backend: db-pod
    spec:
      restartPolicy: Always
      containers:
        - name: db
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
