deploy/kafka-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    backend: kafka
  name: kafka
  namespace: rnd
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      backend: kafka-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        backend: kafka-pod
    spec:
      restartPolicy: Always
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - name: internal
              containerPort: 9092
            - name: external
              containerPort: 9093
            - name: jmx
              containerPort: 5555
          volumeMounts:
            - mountPath: /bitnami/kafka
              name: kafka-data
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-data
