deploy/kowl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    admin: kowl
  name: kowl
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      admin: kowl-pod
  template:
    metadata:
      labels:
        admin: kowl-pod
    spec:
      restartPolicy: Always
      containers:
        - name: kowl
          image: quay.io/cloudhut/kowl:master-ab6caaa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
