deploy/mailer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailer
  name: mailer
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer-pod
  template:
    metadata:
      labels:
        app: mailer-pod
    spec:
      restartPolicy: Always
      containers:
        - name: mailer
          image: microservice-rnd-mailer
          ports:
            - containerPort: 8080
