deploy/runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: runner
  name: runner
  namespace: rnd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runner-pod
  strategy: {}
  template:
    metadata:
      labels:
        app: runner-pod
    spec:
      restartPolicy: Always
      containers:
        - name: runner
          image: ghcr.io/andersevenrud/microservice-rnd-runner:latest
          ports:
            - containerPort: 8080
