deploy/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    admin: adminer
  name: adminer
  namespace: rnd
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    admin: adminer-pod
