deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: rnd
spec:
  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    app: api-pod
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-health
  namespace: rnd
spec:
  sessionAffinity: None
  ports:
    - port: 8081
  selector:
    app: api-pod
