deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: rnd
spec:
  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    app: app-pod
