deploy/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    backend: db
  name: db
  namespace: rnd
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    backend: db-pod
