deploy/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    backend: kafka
  name: kafka
  namespace: rnd
spec:
  clusterIP: None
  ports:
    - name: internal
      port: 9092
    - name: external
      port: 9093
  selector:
    backend: kafka-pod
