deploy/kowl-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    admin: kowl
  name: kowl
  namespace: rnd
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    admin: kowl-pod
