deploy/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    admin: mailhog
  name: mailhog
  namespace: rnd
spec:
  clusterIP: None
  ports:
    - name: smtp
      port: 1025
    - name: http
      port: 8025
  selector:
    admin: mailhog-pod
