deploy/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    backend: zookeeper
  name: zookeeper
  namespace: rnd
spec:
  clusterIP: None
  ports:
    - port: 2181
      name: client
  selector:
    backend: zookeeper-pod
