deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-root
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminer
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /adminer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: rnd
  labels:
    www: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mailhog
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/app-root: /mailhog
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /mailhog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mailhog
            port:
              number: 8025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kowl
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header    X-Forwarded-Prefix /kowl/;
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /kowl(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kowl
            port:
              number: 8080
